--- a/com.yacreader.YACReader.yml
+++ b/com.yacreader.YACReader.yml
@@ -53,7 +53,7 @@ modules:
         sources:
           - type: git
             url: https://github.com/selmf/unarr.git
-            tag: v1.1.1
+            commit: 1df8ab3d281409e9fe6bed8bf485976bb47f5bef
       - name: pdfium
         buildsystem: simple
         build-commands:
