--- a/com.yacreader.YACReader.yml
+++ b/com.yacreader.YACReader.yml
@@ -13,6 +13,7 @@ finish-args:
   - --filesystem=/mnt
   - --filesystem=/media
   - --filesystem=/run/media
+  - --talk-name=org.kde.StatusNotifierWatcher
 rename-desktop-file: YACReader.desktop
 rename-icon: YACReader
 cleanup:
@@ -44,7 +45,7 @@ modules:
     sources:
       - type: git
         url: https://github.com/YACReader/yacreader.git
-        tag: 9.16.1
+        tag: 9.16.2
       - type: file
         path: com.yacreader.YACReader.appdata.xml
     modules:
